# freeradius-rlm_sql_clickhouse

./: Earthfile
.github/workflows/: ci.yml  publish.yml
debian/: freeradius-clickhouse.control  freeradius-clickhouse.install  freeradius-clickhouse.lintian-overrides  freeradius-clickhouse.postinst
raddb/mods-config/sql/main/clickhouse/: queries.conf
src/modules/rlm_sql/drivers/rlm_sql_clickhouse/: README.md  all.mk.in  configure  configure.ac  rlm_sql_clickhouse.c  sql_clickhouse.cxx  sql_clickhouse.h
tests/: docker-compose.yml  integration-test.bats
tests/clickhouse-server/: Dockerfile  init-db.sql
tests/freeradius/: Dockerfile  clients.conf  sql-clickhouse
tests/freeradius/test-scripts/: acct-accounting-off.packet.tpl  acct-accounting-on.packet.tpl  acct-interim-update.packet.tpl  acct-send  acct-start.packet.tpl  acct-stop.packet.tpl
